--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
-      <h1 style="font-color: #333; width: 500px; margin: auto; text-align: center; margin-top: 300px;">Welcome to my website. Click <a href="website sirah.html/home page/homepage.html">here</a> to get started</h1>
+      <h1 style="font-color: #333; width: 500px; margin: auto; text-align: center; margin-top: 300px;">Welcome to The Miracles of Sirah. Click <a href="website sirah.html/home page/homepage.html">here</a> to get started</h1>
     </body>
 </html>
