--- a/website sirah.html/quiz/quiz.html
+++ b/website sirah.html/quiz/quiz.html
@@ -27,7 +27,7 @@
 
 			<button id="next-button"> Aliya </button>
 
-			<a href="http://localhost:5500/maze%20game/" class="float-right" id="btn">Next Game</a>
+			<a href="../maze game/index.html" class="float-right" id="btn">Next Game</a>
 
 			<script src="./script1.js"></script>
 			
