--- a/website sirah.html/home page/homepage.html
+++ b/website sirah.html/home page/homepage.html
@@ -5,21 +5,12 @@
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
-        <header>
-            <a href="../home page/homepage.html" class="logo">Logo</a>
-            <ul>
-              <li><a href="../home page/homepage.html" class="active">Home</a></li>
-              <li><a href="../about us/aboutus.html">About Us</a></li>
-              <li><a href="../quiz/quiz.html">Games</a></li>
-              <li><a href="../contact us/contactus.html">Contact Us</a></li> 
-            </ul>
-        </header>
         <section>
             <img src="stars.png" id="stars">
             <img src="moon.png" id="moon">
             <img src="mountains_behind.png" id="mountains_behind">
             <h6 id="text">Miracle of Sirah</h6>
-            <a href="../explore/explore.html" id="btn">Explore</a>
+            <a href="https://whatsinquran.com/prophets-in-quran/" id="btn">Explore</a>
             <img src="mountains_front.png" id="mountains_front">
         </section>
         <div class="sec" id="sec">
