--- a/website sirah.html/home page/homepage.html
+++ b/website sirah.html/home page/homepage.html
@@ -13,13 +13,44 @@
             <a href="https://whatsinquran.com/prophets-in-quran/" id="btn">Explore</a>
             <img src="mountains_front.png" id="mountains_front">
         </section>
-        <div class="sec" id="sec">
-            <h2>Once Upon a Time</h2>
-            <P>Muhammad first received revelations in 609 CE in a cave on Mount Hira, near Mecca.
-                Muslims regard the Quran as the most important miracle of Muhammad, the proof of his prophethood, and the culmination of a series of divine messages revealed by the angel Gabriel from 609–632 CE.<br><br>The key themes of the early Quranic verses included the responsibility of man towards his creator; the resurrection of the dead, God’s final judgment followed by vivid descriptions of the tortures in Hell and pleasures in Paradise; and the signs of God in all aspects of life. Religious duties included belief in God, asking for forgiveness of sins, offering frequent prayers, assisting others particularly those in need, rejecting cheating and the love of wealth, being chaste, and not killing newborn girls.
-                Muhammad’s immediate family were the first to believe he was a prophet, followed by three main groups of early converts to Islam: younger brothers and sons of great merchants, people who had fallen out of the first rank in their tribe or failed to attain it, and unprotected foreigners.<br><br>
-                Muslims believe the Quran to be both the unaltered and the final revelation of God. Religious concepts and practices include the five pillars of Islam, which are obligatory acts of worship, and following Islamic law, which touches on virtually every aspect of life and society, from banking and welfare to the status of women and the environment.</P>
-        </div>
+    <div class="sec" id="sec" style="
+    font-family: 'Poppins', sans-serif;
+    line-height: 1.9;
+    color: #222;
+    background: linear-gradient(180deg, #fafafa 0%, #f3f0ff 100%);
+    border-radius: 20px;
+    padding: 40px 30px;
+    margin: 50px auto;
+    max-width: 900px;
+    box-shadow: 0 6px 25px rgba(0, 0, 0, 0.08);
+">
+
+  <h2 style="
+      text-align: center;
+      font-size: 38px;
+      font-weight: 700;
+      margin-bottom: 25px;
+      background: linear-gradient(90deg, #5b21b6, #2563eb, #14b8a6);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      letter-spacing: 1px;">
+      Once Upon a Time ✨🌙
+  </h2>
+
+  <p style="
+      font-size: 18px;
+      color: #333;
+      text-align: justify;
+      margin-bottom: 10px;">
+      In the stillness of a cave on Mount Hira, Prophet Muhammad ﷺ received words that would change the world forever. 
+      From that moment in 609 CE until his passing in 632 CE, the Qur’an was revealed — guiding humanity to faith, mercy, and justice.
+      <br><br>
+      His message was simple yet profound: worship One God, care for the weak, live with honesty, and prepare for the Day of Judgment. 
+      What began with his family and a few devoted followers grew into a light that reached every corner of society, offering hope, dignity, and truth.
+      <br><br>
+      Today, Muslims hold the Qur’an as God’s final revelation — timeless guidance for the heart, soul, and life itself.
+  </p>
+</div>
         <script>
             let stars = document.getElementById('stars');
             let moon = document.getElementById('moon');
