--- a/website sirah.html/home page/homepage.html
+++ b/website sirah.html/home page/homepage.html
@@ -13,44 +13,17 @@
             <a href="https://whatsinquran.com/prophets-in-quran/" id="btn">Explore</a>
             <img src="mountains_front.png" id="mountains_front">
         </section>
-    <div class="sec" id="sec" style="
-    font-family: 'Poppins', sans-serif;
-    line-height: 1.9;
-    color: #222;
-    background: linear-gradient(180deg, #fafafa 0%, #f3f0ff 100%);
-    border-radius: 20px;
-    padding: 40px 30px;
-    margin: 50px auto;
-    max-width: 900px;
-    box-shadow: 0 6px 25px rgba(0, 0, 0, 0.08);
-">
-
-  <h2 style="
-      text-align: center;
-      font-size: 38px;
-      font-weight: 700;
-      margin-bottom: 25px;
-      background: linear-gradient(90deg, #5b21b6, #2563eb, #14b8a6);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      letter-spacing: 1px;">
-      Once Upon a Time ✨🌙
-  </h2>
-
-  <p style="
-      font-size: 18px;
-      color: #333;
-      text-align: justify;
-      margin-bottom: 10px;">
-      In the stillness of a cave on Mount Hira, Prophet Muhammad ﷺ received words that would change the world forever. 
-      From that moment in 609 CE until his passing in 632 CE, the Qur’an was revealed — guiding humanity to faith, mercy, and justice.
-      <br><br>
-      His message was simple yet profound: worship One God, care for the weak, live with honesty, and prepare for the Day of Judgment. 
-      What began with his family and a few devoted followers grew into a light that reached every corner of society, offering hope, dignity, and truth.
-      <br><br>
-      Today, Muslims hold the Qur’an as God’s final revelation — timeless guidance for the heart, soul, and life itself.
-  </p>
-</div>
+    Edit here: <div class="sec" id="sec">
+            <h2>Once Upon a Time</h2>
+            <P>In the stillness of a cave on Mount Hira, Prophet Muhammad ﷺ received words that would change the world forever. From that moment in 609 CE until his passing in 632 CE, the Qur’an was revealed guiding humanity to faith, mercy, and justice.    
+               <br>
+                <br>His message was simple yet profound: worship One God, care for the weak, live with honesty, and prepare for the Day of Judgment. What began with his family and a few devoted followers grew into a light that reached every corner of society, offering hope, dignity, and truth.
+                <br>
+                <br>
+                Today, Muslims hold the Qur’an as God’s final revelation timeless guidance for the heart, soul, and life itself.
+            </P>
+        </div>        
+        
         <script>
             let stars = document.getElementById('stars');
             let moon = document.getElementById('moon');
