--- a/website sirah.html/home page/homepage.html
+++ b/website sirah.html/home page/homepage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Parallax Scrolling Website | Vanilla JavaScript</title>
+        <title>Miracle in Sirah</title>
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
@@ -9,7 +9,7 @@
             <img src="stars.png" id="stars">
             <img src="moon.png" id="moon">
             <img src="mountains_behind.png" id="mountains_behind">
-            <h6 id="text">Miracle of Sirah</h6>
+            <h6 id="text">Miracle in Sirah</h6>
             <a href="https://whatsinquran.com/prophets-in-quran/" id="btn">Explore</a>
             <img src="mountains_front.png" id="mountains_front">
         </section>
